asset/sass/_screen.scss
/* ... */
.browse-controls {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    flex-direction: row-reverse;
}

.sorting {
    select {
        width: auto;
    }

    button {
        margin: 0;
    }
}

.resource-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-content: flex-start;
    width: 100%;
    margin: $spacing-l 0 0;
    list-style: none;
    padding-left: 0;
}

.resource-list ~ .pagination {
    width: 100%;
    text-align: right;
}

.resource-list h4 {
    width: 100%;
    margin: 0;
}

.resource-list .resource {
    font-size: .75 * $base-font-size;
    line-height: .75 * $base-line-height;
    width: calc(25% - #{$spacing-l});
    margin: 0 $spacing-l (2 * $spacing-l) 0;
    list-style-type: none;

    &:nth-child(4n) {
        margin-right: 0;
    }
}

.resource-list .resource img {
    max-width: 100%;
    height: auto;
}

.resource-list .date {
    display: block;
}

.browse #outputs {
    width: 100%;
    font-size: .75 * $base-font-size;
}

.browse .outputs-label:after {
    content: ": ";
}

.browse #outputs p {
    display: inline-block
}

.collection.hentry h2 {
    font-size: $base-font-size;
    line-height: $base-line-height;
    margin: (.5 * $base-font-size) 0 0;
}

/* @end */

/* @group ----- Show ----- */

.show #content h2:first-child {
    display: inline-block;
    width: auto;
    margin: 0 0 $spacing-l;
}

.show #content h2:first-child + h3 {
    display: inline-block;
    background-color: rgba(0,0,0,.08);
    font-size: .75 * $base-font-size;
    padding: 0 $spacing-s;
    margin: 0 $spacing-m (1.75 * $spacing-l);
    vertical-align: bottom;
}

.lSSlideOuter {
    margin-bottom: $spacing-l;
}

#itemfiles,
.lSSlideOuter .media-render {
    max-height: 50vh;
    background-color: #222;
}

.lSSlideOuter #itemfiles .media-render {
    display: flex;
    justify-content: center;
}

.lSSlideOuter #itemfiles .media-render a {
    text-align: center;
}

.lSSlideOuter #itemfiles .media-render img {
    max-height: 100%;
    max-width:100%;
}

.lSSlideOuter #itemfiles .media-render iframe {
    width: 100%;
    height: 100%;
}


#content .lSSlideOuter .lSPager.lSGallery {
    margin: $spacing-s auto;
    display: flex;
    align-items: center;
}

#content .lSSlideOuter .lSPager.lSGallery li.active,
#content .lSSlideOuter .lSPager.lSGallery li:hover {
    border-radius: 0;
}

.property {
    margin-bottom: $spacing-l;
    vertical-align: top;
    overflow: hidden;
}

.property h4 {
    font-size: $base-font-size;
    width: 25%;
    margin: 0;
    display: block;
    text-align: right;
    float: left;
    word-break: break-word;
}

.value {
    display: block;
    width: calc(75% - #{$spacing-l});
    height: auto;
    text-align: left;
}

.value:not(:first-of-type) {
    margin-top: $spacing-m;
    padding-top: $spacing-m - 1px;
    border-top: 1px solid;
}

.value > p:first-child {
    margin-top: 0;
}

.value > p:last-child {
    margin-bottom: 0;
}

.value .language {
    font-size: .875 * $base-font-size;
    background-color: #e7e7e7;
    display: inline-block;
    padding: 0 $spacing-s;
}

.value a span {
    background-color: $primary-color;
}

.value a.metadata-browse-link {
    float: right;
}

.resource-link img {
    height: 2 * $spacing-l;
    width: auto;
    display: inline-block;
    vertical-align: middle;
    margin-right: $spacing-s;
}

.value table {
    margin-top: 0;
}

.show #output-format-list {
    margin: 0;
}

.item-set.show .metadata {
    width: 100%;
}

.item-set.show .metadata + h3 {
    width: 100%;
}


.linked-header,
.linked-footer {
    width: 100%;
    display: flex;
    justify-content: flex-end;
}

#linked-filter {
    display: flex;
    align-items: center;
    width: 50%;
    justify-content: flex-start;
    margin-right: auto;
}

#linked-filter h4 {
    font-size: $base-font-size;
    width: auto;
    padding: 0;
    margin-right: $spacing-s;
    text-align: left;
}

#item-linked .pagination {
    width: 50%;
    text-align: right;
}

#item-linked .resource-link img {
    height: 1.5 * $spacing-l;
    width: auto;
    display: block;
    margin-right: $spacing-s;
}

#linked-resources table {
    margin: 0 0 (3 * $spacing-l);
}

#linked-resources caption {
    text-align: left;
    font-weight: bold;
    padding: $spacing-s $spacing-m;
}

#linked-resources > h4 {
    padding: $spacing-s gutter();
}

#linked-resources td {
    vertical-align: center;
}

#linked-resources .linked-resource {
    border-bottom: 1px solid #000;
    margin-bottom: $spacing-m;
    width: calc(75% - #{$spacing-l});
    padding: 0 gutter() #{$spacing-m - 1px};
}

#linked-resources .resource-link {
    display: inline-flex;
    align-items: center;
}

/* @end */

/* @group ----- Advanced Item Search ----- */

#advanced-search .value {
    display: flex;
    margin-bottom: $spacing-m;
}

#advanced-search .value:not(:first-child) {
    margin-top: $spacing-m;
}

#advanced-search button.remove-value {
    width: 1.5 * $base-line-height;
    height: 1.5 * $base-line-height;
    position: relative;
    background-color: #000;
    color: #fff;
    margin-left: .25 * $base-line-height;
    padding: 0 $spacing-s;
}

#advanced-search button.remove-value:before {
    text-align: center;
    padding: 0;
    width: 100%;
    text-indent: 0;
}

.add-value.button {
    font-size: .75 * $base-font-size;
    display: inline-block;
}

/* @end */

/* @group ----- Pages ----- */

.sub-menu {
    background-color: $primary-color;
    padding: $spacing-l;
    @include bleed($spacing-l (2 * $spacing-l) 0);
    margin-bottom: $spacing-l;
}

.sub-menu h4 {
    margin-top: 0;
}

.sub-menu ul {
    margin: 0;
}

.sub-menu > ul > li {
    margin: 0 $spacing-s $spacing-s 0;
}

.sub-menu > ul > li:not(:last-of-type):after {
    content: "\00b7";
    display: inline-block;
    margin-left: $spacing-s;
}

.sub-menu .current a {
    border-bottom: 2px solid;
}
/* ... */

